# Wisensing-esp32

./: LICENSE  README.md  environment.yml  requirements.txt
DataProcessing/: 1_format_and_preprocess.py  2_slicing.py  3_dataset_builder.py  config.py  data_annotation.py  dataset_source.txt  single_plot.py  slicing_source_demo.txt
DataProcessing/1_raw_data/: person_200cm_1.csv
ModelTraining/: best_model.keras  int8_quant_mlp.tflite  model.cc  model.h  model_training_and_quantization.ipynb  preprocessing.c  preprocessing.h
OnboardProcessing/esp-wisense/: .gitignore  CMakeLists.txt  Kconfig  README.md  idf_component.yml
OnboardProcessing/esp-wisense/examples/person-detection/: CMakeLists.txt  sdkconfig.defaults
OnboardProcessing/esp-wisense/examples/person-detection/main/: CMakeLists.txt  main.c  model.cc  model.h
OnboardProcessing/esp-wisense/examples/softAP/: CMakeLists.txt  sdkconfig.defaults
OnboardProcessing/esp-wisense/examples/softAP/main/: CMakeLists.txt  idf_component.yml  soft_ap.c
OnboardProcessing/esp-wisense/include/: esp_wisense.h  esp_wisense_connection.h  model.h
OnboardProcessing/esp-wisense/private/: esp_wisense_internal.h
OnboardProcessing/esp-wisense/src/: esp_wisense.c  esp_wisense_connection.c  inference.cc
OnboardProcessing/esp-wisense/tests/: CMakeLists.txt  partitions.csv  sdkconfig.defaults  test.c
OnboardProcessing/esp-wisense/tests/main/: CMakeLists.txt  fixed_csi.c  fixed_csi.h  main.c  preprocessing.c  preprocessing.h
